# sgt

./: .gitignore  CMakeLists.txt  frame_snapshot.h  grpc_video_capture.cpp  grpc_video_capture.h  helper.cpp  helper.h  main.cpp  mapper.cpp  mapper.h  pose.cpp  pose.h  slam.cpp  slam.h  tile.cpp  tile.h  tiles_storage.cpp  tiles_storage.h
protos/: compile_proto.sh  video.proto
